new list of people page

--- a/Finalp.html
+++ b/Finalp.html
@@ -34,10 +34,16 @@ HTML
                  <input type="radio" name="gender" value="female"> Female
                  <input type="radio" name="gender" value="unknown"> Unknown </div>
                  <hr>  <!--Horizontal Rule -->
-                 <button type="submit" class="registerb">Register</button></a>
-                 
+               </form>
 
-            </form>
+                 <form action="tinderforfriendshomepageone.html">
+                     <input type="submit" value="Register">
+                  </form>
+                 <!--<button type="submit" class="registerb">Register</button></a>-->
+
+
+
+
 
          </body>
        </html>
