--- a/tinderforfriendsthree.html
+++ b/tinderforfriendsthree.html
@@ -11,15 +11,20 @@
     </span>
 
     <center>
-    <h1> What is the preferred age range of your new friend? </h1>
-    <form action="/action_page.php" method="get">
-    <span class="age"></span><input type="age" placeholder="type age here" autocomplete="off" name= area required>
-    <input type="Submit" value="Submit" title="submit age" >
-    <p> </p>
+      <h1> What is the preferred age range of your new friend? </h1>
+      <form action="/action_page.php" method="get">
+      <span class="age"></span><input type="age" placeholder="type age here" autocomplete="off" name= area required>
+      </form>
+      <p> </p>
+
+      <form action="tinderforfriendsfour.html">
+        <input type="submit" value="Go to next question">
+      </form>
+      <!--  <input type="Submit" value="Submit" title="submit age" > -->
 
 
     <!--<span class="gender"></span><input type="gender" placeholder="type gender here" autocomplete="off" name= area required>
     <input type="Submit" value="Submit" title="submit gender" > -->
-    </form>
+
   </center>
 </body>
