--- a/Finalp.html
+++ b/Finalp.html
@@ -32,16 +32,13 @@ HTML
                <label for="gend"><b>What is your gender?</b></label>
                  <input type="radio" name="gender" value="male"> Male
                  <input type="radio" name="gender" value="female"> Female
-                 <input type="radio" name="gender" value="unknown"> Unknown </div>
+                 <input type="radio" name="gender" value="other"> Other </div>
                  <hr>  <!--Horizontal Rule -->
                </form>
 
                  <form action="tinderforfriendshomepageone.html">
-                     <input type="submit" value="Register">
-                  </form>
-                 <!--<button type="submit" class="registerb">Register</button></a>-->
-
-
+                     <button type="submit" class="registerb" required>Register</button></a>
+                </form>
 
 
 
