--- a/tinderforfriendshomepageone.html
+++ b/tinderforfriendshomepageone.html
@@ -8,10 +8,9 @@
   <body>
 
     <center>
-      <h1> Welcome to __________________!! <p></p> Would you like to find a friend now or later?</h1>
+      <h1> Welcome to __________________!! <p></p> Would you like to find a friend now ?</h1>
         <span id="navigation">
-          <a href= "tinderforfriends.html"><p1><button>Now</button><p1></a>
-          <a href= "tinderforfriendshomepagetwo.html"><p1><button>Later</button><p1></a>
+          <a href= "tinderforfriends.html"><p1><button>Yes</button><p1></a>
         </span>
     </center>
     </body>
