--- a/tinderforfriendsplace.html
+++ b/tinderforfriendsplace.html
@@ -7,7 +7,7 @@
 
   <body>
     <span id = "navigation">
-      <a href= "tinderforfriendstwo.html"></a>
+      <a href= "tinderforfriendsthree.html"></a>
     </span>
 
     <center>
@@ -17,13 +17,10 @@
       </form>
       <p> </p>
 
-      <form action="tinderforfriendsthree.html">
+      <form action="finalSuggest.html">
         <input type="submit" value="Go to next question">
       </form>
-    <!--  <script>
-      var ages = document.getElementById("inAge");
-      </script>
-      <input type="Submit" value="Submit" title="submit age" > -->
+      <!--  <input type="Submit" value="Submit" title="submit age" > -->
 
 
     <!--<span class="gender"></span><input type="gender" placeholder="type gender here" autocomplete="off" name= area required>
