--- a/Finalp.html
+++ b/Finalp.html
@@ -1,4 +1,3 @@
-HTML
 <!DOCTYPE html>
 <html>
   <head>
@@ -14,7 +13,7 @@ HTML
         <hr>
         <!-- Username/Name -->
         <label for="name"><b>Username</b></label>
-        <input type="text" placeholder="Enter username" name="name" required>
+        <input type="text" placeholder="Enter username" name="name" id=inName required>
         <!--Email-->
         <label for="email"><b>Email</b></label>
         <input type="text" placeholder="Enter Email" name="email" required>
@@ -25,6 +24,7 @@ HTML
         <label for="pws-r"><b>Repeat Password</b></label>
         <input type="password" placeholder="Repeat Password" name="pws-r" required>
         <!-- Birthday Info -->
+<!-- NEED TO SAVE this inputted information-->
         <label for="bd"><b>Birthday</b></label>
                <input type="date" name="bday">
                <!-- Gender Info -->
@@ -36,7 +36,7 @@ HTML
                  <hr>  <!--Horizontal Rule -->
                </form>
 
-                 <form action="tinderforfriendshomepageone.html">
+                 <form action="tinderforfriends.html">
                      <input type="submit" value="Register">
                   </form>
                  <!--<button type="submit" class="registerb">Register</button></a>-->
