--- a/Mainpage.html
+++ b/Mainpage.html
@@ -4,6 +4,7 @@
 
 <header>
   <link rel="stylesheet" type="text/css" href="webpagestyle.css">
+  <link rel="stylesheet" type="text/css" href="tinderforfriends.css">
   <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
   <script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
@@ -23,12 +24,12 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home
+            <a class="nav-link" href="Mainpage.html">Home
                   <span class="sr-only">(current)</span>
                 </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Register</a>
+            <a class="nav-link" href="FinalP.html">Register</a>
           </li>
         </ul>
       </div>
@@ -60,7 +61,10 @@
       <div class="carousel-item" style="background-image: url('https://visit-el-paso-production.s3.amazonaws.com/places/images/000/002/053/optimized/photodune-7448880-in-bowling-m.jpg?1464717847')">
         <div class="carousel-caption d-none d-md-block">
           <h2 class="display-4">Make New Friends</h2>
-          <p class="lead">This is a description for the third slide.</p>
+          <p class="lead">Would you like to find a friend now?</p>
+          <span id="navigation">
+            <a href= "FinalP.html"><p1><button>Yes</button><p1></a>
+          </span>
         </div>
       </div>
     </div>
