the final final

--- a/final project/boyChoicePage.html
+++ b/final project/boyChoicePage.html
@@ -38,7 +38,7 @@
     </nav>
     <center>
       <font color= "white">
-      <br><br><br>
+        <br><br><br><br><br><br><br><br><br>
       <h1> Great! Here is a list of your male friends that we found you! </h1>
       <button onclick="myFunction()">Click for a new friend!</button>
       <p id="demo"> </p>
@@ -66,7 +66,7 @@
         var friends = ["Michael", "Josh", "Liam", "Harry", "Lewis", "Jackson", "Dmitry", "Alexander", "Matthew", "Adam", "Steve",
           "Caleb", "Chase", "Preston", "Will", "Mitch", "Andrew", "Daniel", "Jonah", "Ruben", "Noah", "Jacob", "Sean",];
         var names = shuffle(friends)
-        var email = ["pizza123@gmail.com", "docu34@aol.com", "dogsrgr8@yahoo.com", "ilovegiraffes@gmail.com", "gbacon@mac.com", "gdog@yahoo.com",];
+        var email = ["pizza123@gmail.com", "docu34@aol.com", "dogsrgr8@yahoo.com", "ilovegiraffes@gmail.com", "gbacon@mac.com", "gdog@yahoo.com","r3djack3t@yahoo.com", "friedchckn73@gmail.com", "argarnio@aol.com", "greenball00n@yahoo.com"];
         var emails = shuffle(email)
         document.getElementById("myText").innerHTML = names[0];
         document.getElementById("myTexts").innerHTML = emails[0];
