--- a/final project/girlChoicePage.html
+++ b/final project/girlChoicePage.html
@@ -36,7 +36,7 @@
     </nav>
     <center>
       <font color= "white">
-      <br><br><br>
+        <br><br><br><br><br><br><br><br><br>
       <h1> Great! Here is a female friend in your area that we found for you! </h1>
       <button onclick="myFunction()">Click for a new friend!</button>
       <p id="demo"> </p>
@@ -65,7 +65,7 @@
         "Sarah", "Katrina", "Zoey", "Kim", "Olivia", "Ava", "Emma", "Isabella", "Michelle", "Amanda", "Leah", "Savannah", "Grace",
         "Melissa", "Mikayla", "Jaclyn", "Lousia", "Amelia", "Charlotte"];
         var names = shuffle(friends)
-        var email = ["pizza123@gmail.com", "docu34@aol.com", "dogsrgr8@yahoo.com", "ilovegiraffes@gmail.com", "gbacon@mac.com"];
+        var email = ["pizza123@gmail.com", "docu34@aol.com", "dogsrgr8@yahoo.com", "ilovegiraffes@gmail.com", "gbacon@mac.com","r3djack3t@yahoo.com", "friedchckn73@gmail.com", "argarnio@aol.com", "greenball00n@yahoo.com"];
         var emails = shuffle(email)
         document.getElementById("myText").innerHTML = names[0];
         document.getElementById("myTexts").innerHTML = emails[0];
